--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/upstash-redis-adapter": "^1.0.2",
     "@upstash/redis": "^1.22.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -17,6 +18,7 @@
     "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
