--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@auth/upstash-redis-adapter": "^1.0.2",
+    "@hookform/resolvers": "^3.3.1",
+    "@tailwindcss/forms": "^0.5.6",
     "@upstash/redis": "^1.22.1",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
@@ -18,8 +21,10 @@
     "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -31,5 +36,8 @@
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
+  },
+  "resolutions": {
+    "zod": "^3.22.3"
   }
 }
