--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-auth": "^4.23.2",
@@ -27,7 +28,7 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@types/node": "latest",
+    "@types/node": "^20.8.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
