--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.279.0",
+    "nanoid": "^5.0.1",
     "next": "latest",
     "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.3"
   },
